# game_template_rs

./: Cargo.toml  README.md
src/: app.rs  editor.rs  inputs.rs  lib.rs  main.rs  visuals.rs
src/engine/: controller.rs  editor.rs  maths.rs  mod.rs
src/engine/graphics/: camera.rs  color.rs  mod.rs  renderer.rs
src/engine/graphics/model/: mod.rs  renderer.rs  texture.rs
src/graphics/: color.rs  mod.rs  renderer.rs
